tests/func/recognizers/test_recognizers_parse_list_of_integers.err
1:3: syntax error: unexpected token 
    1 | [4, 2, 1, 6, 3]
      |           ^^^ expected: STOP int_less_than_five